# CapitalReTests

./: README.md  debugger.py  pyproject.toml
locators/: __init__.py  main_page_locators.py  markets_page_locators.py  more_page_locators.py  product_page_locators.py
pages/: __init__.py  base_page.py  main_page.py  markets_page.py  more_page.py  product_page.py
tests/: conftest.py  local_bugs.py  web_bugs.py
